--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,16 +17,21 @@
         android:background="@color/white"
         tools:context=".ui.MainActivity">
 
-        <TextView
-            android:id="@+id/tv_ss"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            android:onClick="@{() -> vm.loadSubWayFacilitiesData(key)}"
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/gl_start"
+            style="@style/GuideLine40Start"/>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/gl_end"
+            style="@style/GuideLine40End"/>
+
+        <androidx.appcompat.widget.AppCompatEditText
+            style="@style/inputDefaultBox"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toEndOf="@id/gl_start"
+            app:layout_constraintEnd_toStartOf="@id/gl_end"
+            android:hint="@string/hint_main_search_station"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
