--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,9 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <data>
+
         <variable
             name="vm"
             type="com.young.presentation.viewmodel.MainViewModel" />
@@ -11,27 +13,46 @@
             name="key"
             type="String" />
     </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
+        app:layoutDescription="@xml/scene_main"
         tools:context=".ui.MainActivity">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/gl_start"
-            style="@style/GuideLine40Start"/>
+            style="@style/GuideLine40Start" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/gl_end"
-            style="@style/GuideLine40End"/>
+            style="@style/GuideLine40End" />
+        
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/gl_top"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintGuide_percent="0.175"
+            android:orientation="horizontal"/>
 
         <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/et_station_search"
             style="@style/inputDefaultBox"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/gl_start"
-            app:layout_constraintEnd_toStartOf="@id/gl_end"
-            android:hint="@string/hint_main_search_station"/>
+            android:hint="@string/hint_main_search_station"
+            app:layout_constraintTop_toBottomOf="@id/gl_top"
+            app:layout_constraintStart_toStartOf="@+id/gl_start"
+            app:layout_constraintEnd_toEndOf="@id/gl_end" />
 
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="@{() -> vm.inputTextClear()}"
+            app:srcCompat="@drawable/close_circle_outline"
+            app:layout_constraintTop_toTopOf="@id/et_station_search"
+            app:layout_constraintBottom_toBottomOf="@id/et_station_search"
+            app:layout_constraintEnd_toEndOf="@id/et_station_search"
+            android:layout_marginEnd="10dp"/>
+        
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
