--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,13 @@
             app:layout_constraintBottom_toBottomOf="@id/et_station_search"
             app:layout_constraintEnd_toEndOf="@id/et_station_search"
             android:layout_marginEnd="10dp"/>
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@color/black"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
         
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
