- DropBox Adapter 추가  - 역사별 전체정보 관련 API 추가는 해놨는데 API Key가 다 다른듯 내일 문의해서 처리

--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -4,6 +4,9 @@
         <domain includeSubdomains="true">
             openapi.seoul.go.kr
         </domain>
+        <domain includeSubdomains="true">
+            openapi.kric.go.kr
+        </domain>
     </domain-config>
 </network-security-config>
 
