--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,10 @@
             type="com.young.presentation.viewmodel.MainViewModel" />
 
         <variable
+            name="infoViewModel"
+            type="com.young.presentation.viewmodel.FullRouteInformationViewModel" />
+
+        <variable
             name="key"
             type="String" />
     </data>
@@ -40,6 +44,7 @@
             android:id="@+id/et_station_search"
             style="@style/inputDefaultBox"
             android:hint="@string/hint_main_search_station"
+            customTextWatcher="@{infoViewModel.getTextChangeListener()}"
             app:layout_constraintTop_toBottomOf="@id/gl_top"
             app:layout_constraintStart_toStartOf="@+id/gl_start"
             app:layout_constraintEnd_toEndOf="@id/gl_end" />
@@ -47,7 +52,6 @@
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="@{() -> vm.inputTextClear()}"
             app:srcCompat="@drawable/close_circle_outline"
             app:layout_constraintTop_toTopOf="@id/et_station_search"
             app:layout_constraintBottom_toBottomOf="@id/et_station_search"
