--- a/app/src/main/res/drawable/popup_background.xml
+++ b/app/src/main/res/drawable/popup_background.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:bottomLeftRadius="13dp"
-        android:bottomRightRadius="13dp"/>
+    <corners android:radius="13dp"/>
     <solid android:color="@color/white"/>
 </shape>
