--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,9 @@
             android:id="@+id/et_station_search"
             style="@style/inputDefaultBox"
             android:hint="@string/hint_main_search_station"
-            customTextWatcher="@{infoViewModel.getTextChangeListener()}"
+            android:imeOptions="actionSearch"
+            android:inputType="text"
+            android:text="@={infoViewModel._userSearchStationName}"
             app:layout_constraintTop_toBottomOf="@id/gl_top"
             app:layout_constraintStart_toStartOf="@+id/gl_start"
             app:layout_constraintEnd_toEndOf="@id/gl_end" />
