--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,71 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-
+<layout>
     <data>
 
-        <variable
-            name="vm"
-            type="com.young.presentation.viewmodel.MainViewModel" />
-
-        <variable
-            name="infoViewModel"
-            type="com.young.presentation.viewmodel.FullRouteInformationViewModel" />
-
-        <variable
-            name="key"
-            type="String" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:background="@color/white"
-        app:layoutDescription="@xml/scene_main"
-        tools:context=".ui.MainActivity">
+        android:layout_height="match_parent">
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/gl_start"
-            style="@style/GuideLine40Start" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/gl_end"
-            style="@style/GuideLine40End" />
-        
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/gl_top"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintGuide_percent="0.175"
-            android:orientation="horizontal"/>
-
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/et_station_search"
-            style="@style/inputDefaultBox"
-            android:hint="@string/hint_main_search_station"
-            android:imeOptions="actionSearch"
-            android:inputType="text"
-            android:text="@={infoViewModel._userSearchStationName}"
-            app:layout_constraintTop_toBottomOf="@id/gl_top"
-            app:layout_constraintStart_toStartOf="@+id/gl_start"
-            app:layout_constraintEnd_toEndOf="@id/gl_end" />
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/close_circle_outline"
-            app:layout_constraintTop_toTopOf="@id/et_station_search"
-            app:layout_constraintBottom_toBottomOf="@id/et_station_search"
-            app:layout_constraintEnd_toEndOf="@id/et_station_search"
-            android:layout_marginEnd="10dp"/>
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@color/black"
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/lo_main_appbar"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
-        
+            app:layout_constraintBottom_toTopOf="@id/nav_host_fragment">
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/nav_host_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@color/white"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/main_graph"
+            app:layout_constraintTop_toBottomOf="@id/lo_main_appbar"
+            app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
