--- a/app/src/main/res/layout/item_station_name.xml
+++ b/app/src/main/res/layout/item_station_name.xml
@@ -3,28 +3,41 @@
     <data>
         <variable
             name="vm"
-            type="com.young.presentation.viewmodel.MainViewModel" />
+            type="com.young.presentation.viewmodel.FullRouteInformationViewModel" />
         <variable
-            name="stationName"
-            type="String" />
+            name="data"
+            type="com.young.presentation.model.AllRouteInformation" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:onClick="@{() -> vm.onStationClick(data)}">
 
         <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/item_tv_station_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="15sp"
-            android:text="@{stationName}"
+            android:text="@{data.stinNm}"
+            lineColor="@{data.lnCd}"
             android:textColor="@color/black"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_marginStart="10dp"
+            lineLogo="@{data.lnCd}"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/item_tv_station_name" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
