--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -10,5 +10,17 @@
         android:name="com.young.metro.ui.HomeFragment"
         tools:layout="@layout/fragment_home">
 
+        <action
+            android:id="@+id/action_fragment_home_to_locationListFragment"
+            app:destination="@id/locationListFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
     </fragment>
+    <fragment
+        android:id="@+id/locationListFragment"
+        android:name="com.young.metro.ui.LocationListFragment"
+        tools:layout="@layout/fragment_location_list"
+        android:label="LocationListFragment" />
 </navigation>
