--- a/app/src/main/res/layout/fragment_location_list.xml
+++ b/app/src/main/res/layout/fragment_location_list.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <data>
+
         <variable
             name="vm"
             type="com.young.presentation.viewmodel.LocationViewModel" />
@@ -9,17 +12,19 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/gl_loading_top"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.25"/>
+            app:layout_constraintGuide_percent="0.25" />
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/lottie_loading"
+            setDataCheckVisible="@{vm.loading}"
             android:layout_width="150dp"
             android:layout_height="150dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -29,12 +34,47 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             style="@style/BlackTextViewMediumSize15"
-            app:layout_constraintTop_toBottomOf="@id/lottie_loading"
-            android:layout_marginTop="20dp"
+            setDataCheckVisible="@{vm.loading}"
+            android:layout_width="0dp"
+            android:layout_margin="20dp"
             android:gravity="center"
             android:text="@string/txt_location_loading"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/lottie_loading" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/iv_location_failed_icon"
+            setDataCheckVisible="@{vm.failedLocationData}"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/gl_loading_top"
+            app:srcCompat="@drawable/ic_wrong_location_black" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            style="@style/BlackTextViewMediumSize15"
+            setDataCheckVisible="@{vm.failedLocationData}"
+            android:layout_width="0dp"
+            android:layout_margin="20dp"
+            android:gravity="center"
+            android:text="@string/txt_location_failed_data"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_location_failed_icon" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_location_near_station"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:overScrollMode="never"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:listitem="@layout/item_location_near_station"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
