- locaiton data null 되는거 Update 요청 추가  - 검색 시 라인별로 나오게 묶는 거 했음  - 디테일 화면 추가 중...

--- a/app/src/main/res/layout/base_spinner_list.xml
+++ b/app/src/main/res/layout/base_spinner_list.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ic_sync"
             android:layout_marginTop="10dp"
-            setDataCheckVisible="@{vm.loading}"
+            setDataCheckVisible="@{vm.failedInformationData}"
             android:onClick="@{() -> vm.loadFullRouteInformation()}"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -39,7 +39,7 @@
             android:text="@string/txt_network_failed"
             android:layout_margin="10dp"
             android:gravity="center"
-            setDataCheckVisible="@{vm.loading}"
+            setDataCheckVisible="@{vm.failedInformationData}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/iv_network_failed_icon"
