--- a/app/src/main/res/layout/fragment_station_information_detail.xml
+++ b/app/src/main/res/layout/fragment_station_information_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
             name="vm"
@@ -10,6 +11,27 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_detail_information_station_name"
+            style="@style/BlackTextViewMediumSize15"
+            android:text="@{vm.selectStationData.stinNm}"
+            android:layout_marginStart="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_detail_information_station_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            tools:listitem="@layout/item_line_logo"
+            android:orientation="horizontal"
+            android:overScrollMode="never"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintTop_toTopOf="@id/tv_detail_information_station_name"
+            app:layout_constraintBottom_toBottomOf="@id/tv_detail_information_station_name"
+            app:layout_constraintStart_toEndOf="@id/tv_detail_information_station_name"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
