--- a/app/src/main/res/layout/item_station_name.xml
+++ b/app/src/main/res/layout/item_station_name.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
             name="vm"
@@ -7,8 +8,12 @@
         <variable
             name="data"
             type="com.young.presentation.model.AllRouteInformation" />
+        <variable
+            name="adapter"
+            type="com.young.metro.adapter.LineLogoAdapter" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/lo_item_station_name"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,7 +25,6 @@
             android:layout_height="wrap_content"
             android:textSize="15sp"
             android:text="@{data.stinNm}"
-            lineColor="@{data.lnCd}"
             android:textColor="@color/black"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
@@ -30,14 +34,18 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="16dp"
-            android:layout_height="16dp"
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            lineLogo="@{data.lnCd}"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/item_tv_station_name" />
+            tools:listitem="@layout/item_line_logo"
+            android:orientation="horizontal"
+            onListAdapterSetting="@{adapter}"
+            android:overScrollMode="never"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintTop_toTopOf="@id/item_tv_station_name"
+            app:layout_constraintBottom_toBottomOf="@id/item_tv_station_name"
+            app:layout_constraintStart_toEndOf="@id/item_tv_station_name"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
