--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -16,16 +16,18 @@
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+            app:popExitAnim="@anim/slide_out_right" />
         <action
             android:id="@+id/action_fragment_home_to_stationInformationDetailFragment"
-            app:destination="@id/stationInformationDetailFragment" />
+            app:destination="@id/stationInformationDetailFragment"
+            app:enterAnim="@anim/slide_in_up"
+            app:popExitAnim="@anim/slide_out_down"/>
     </fragment>
     <fragment
         android:id="@+id/locationListFragment"
         android:name="com.young.metro.ui.LocationListFragment"
-        tools:layout="@layout/fragment_location_list"
-        android:label="LocationListFragment" >
+        android:label="LocationListFragment"
+        tools:layout="@layout/fragment_location_list">
         <action
             android:id="@+id/action_locationListFragment_to_stationInformationDetailFragment"
             app:destination="@id/stationInformationDetailFragment" />
@@ -33,6 +35,15 @@
     <fragment
         android:id="@+id/stationInformationDetailFragment"
         android:name="com.young.metro.ui.StationInformationDetailFragment"
-        tools:layout="@layout/fragment_station_information_detail"
-        android:label="StationInformationDetailFragment" />
+        android:label="StationInformationDetailFragment"
+        tools:layout="@layout/fragment_station_information_detail">
+
+        <argument
+            android:name="stinCodes"
+            app:argType="string[]" />
+
+        <argument
+            android:name="stationName"
+            app:argType="string" />
+    </fragment>
 </navigation>
