--- a/app/src/main/res/anim/slide_out_down.xml
+++ b/app/src/main/res/anim/slide_out_down.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:duration="250">
-
+    <translate
+        android:fromYDelta="0%" android:toYDelta="100%" />
     <alpha
-        android:fromAlpha="0.0"
-        android:toAlpha="1.0"/>
+        android:fromAlpha="1.0" android:toAlpha="0.0"/>
 </set>
