--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -39,6 +39,17 @@
             app:layout_constraintGuide_percent="0.5"
             android:orientation="vertical"/>
 
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottie_loading"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            app:lottie_loop="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:lottie_fileName="loading.json" />
+
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/et_station_search"
             style="@style/inputDefaultBox"
