--- a/app/src/main/res/layout/item_location_near_station.xml
+++ b/app/src/main/res/layout/item_location_near_station.xml
@@ -15,12 +15,15 @@
         <variable
             name="adapter"
             type="com.young.metro.adapter.LineLogoAdapter" />
+        <variable
+            name="position"
+            type="Integer" />
     </data>
 
     <com.young.metro.ui.custom.CustomConstraintLayout
         android:id="@+id/lo_item_location_near_station"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:onClick="@{() -> vm.onStationClick(data) }"
+        android:onClick="@{() -> vm.onStationClick(data , position) }"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -45,7 +48,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:orientation="horizontal"
-            android:transitionName="StationLineNumber"
+            android:transitionName="@{@string/transition_station_line_number(data.stationName)}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="@id/tv_item_location_near_station_name"
             app:layout_constraintEnd_toStartOf="@id/iv_item_location_near_station_next"
@@ -57,7 +60,7 @@
             android:id="@+id/tv_item_location_near_station_name"
             style="@style/BlackTextViewMediumSize15"
             android:layout_marginTop="15dp"
-            android:transitionName="StationName"
+            android:transitionName="@{@string/transition_station_name(data.stationName)}"
             android:text="@{data.stationName}"
             app:layout_constraintBottom_toTopOf="@id/tv_item_location_near_station_distance"
             app:layout_constraintStart_toStartOf="parent"
