- DropBox ViewModel 추가  - 출입구에서 승강장 API 추가했음  - Tel Data 받아와야함

--- a/app/src/main/res/layout/item_station_name.xml
+++ b/app/src/main/res/layout/item_station_name.xml
@@ -7,7 +7,7 @@
             type="com.young.presentation.viewmodel.FullRouteInformationViewModel" />
         <variable
             name="data"
-            type="com.young.presentation.model.AllRouteInformation" />
+            type="com.young.presentation.model.ListRouteInformation" />
         <variable
             name="adapter"
             type="com.young.metro.adapter.LineLogoAdapter" />
