--- a/app/src/main/res/layout/fragment_station_information_detail.xml
+++ b/app/src/main/res/layout/fragment_station_information_detail.xml
@@ -13,23 +13,25 @@
             type="String" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_detail_information_station_name"
-            style="@style/BlackTextViewMediumSize15"
+            style="@style/BlackTextViewBoldSize18"
+            android:layout_marginTop="15dp"
             android:layout_marginStart="20dp"
             android:transitionName="@{@string/transition_station_name(stationName)}"
-            android:text="@{vm.selectStationData.stinNm}"
+            android:text="@{stationName}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_detail_information_station_logo"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:transitionName="@{@string/transition_station_line_number(stationName)}"
@@ -38,8 +40,11 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="@id/tv_detail_information_station_name"
             app:layout_constraintStart_toEndOf="@id/tv_detail_information_station_name"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/tv_detail_information_station_name"
-            tools:listitem="@layout/item_line_logo" />
+            tools:listitem="@layout/item_line_logo_select" />
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
